# the-feeling-of-success

./: LICENSE  README.md  requirements.txt
manu_sawyer/: CMakeLists.txt  CoordBoundsSawyer.txt  README.md  RosInfo.txt  package.xml
manu_sawyer/src/: .gitignore  GelSightA.py  GelSightB.py  H.npy  KinectA.py  KinectB.py  KinectB_hd.py  WSG50_manu.py  WSG50_manu_test.py  calibrate.py  calibration_info_nordri.txt  calibration_info_sudri.txt  collect_data_for_Andrews_net.py  compress_data.py  correct_name_of_object.py  data_recorder.py  data_recorder_and_torque_controller.py  demo_pick_object.py  demo_torque_control.py  demo_torque_control_2.py  demo_torque_control_2_short.py  extract_images_for_paper.py  find_cool_GelSight_images.py  grasp_net.py  optimize_grasp.py  print_cartesian_positions.py  process_data.py  randomized_search_1.py  randomized_search_2.py  randomized_search_2_recorded.py  randomized_search_2_ver2.py  randomized_search_3.py  run_experiment_nordri.py  run_experiment_nordri_torque_control.py  run_experiment_nordri_with_pauses.py  run_experiment_sudri.py  set_true_label_of_data.py  success_probability_vs_force.py  t.npy  test_grasp_chance.py  (+4 more)
manu_sawyer/src/grasp_cnn/: convert_db.py  demo_press.py  final_params_full.py  grasp_net.py  grasp_params.py  label_video.py  manu_params.py  mvg.py  new_grasp_net.py  new_params.py  old.py  params_v2.py  planefit.py  resnet_v1.py  run.py  run1.sh  run2.sh  run_manu.sh  segment.py  start  start.ipy  start_emacs  train_grasp.py  upload_model.sh  vgg.py  vgg_grasp_net.py
manu_sawyer/src/grip_and_record/: getch.py  inverse_kin.py  locate_cylinder.py  mvg.py  planefit.py  robot_camera.py  robot_utils.py  test_kinect.py  transform_test.py
manu_sawyer/src/launch/: gelsightA_driver.launch  gelsightB_driver.launch  start_KinectB.sh
manu_sawyer/src/tensorflow_model_is_gripping/: cam_test.py  download_model.sh  grasp_example.py  press.py  (+5 more)
(+16 files in other folders)
