<?xml version="1.0"?>
<package>
    <name>manu_sawyer</name>
    <version>0.0.1</version>
    <description>Manu's Sawyer package</description>

    <maintainer email="manu.upadhyaya@berkeley.edu">Manu Upadhyaya</maintainer>
    <author email="greenkee@berkeley.edu">Justin Lin</author>
    <license>MIT</license>

    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>intera_core_msgs</build_depend>
    <build_depend>wsg_50_common</build_depend>
    <build_depend>wsg_50_python</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>intera_core_msgs</run_depend>
    <run_depend>wsg_50_common</run_depend>
    <run_depend>wsg_50_python</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
